ollama2/ollama/ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-tailscale
  namespace: ollama
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: ollama
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
  type: LoadBalancer
  loadBalancerClass: tailscale
