ollama2/ollama/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ollama
  namespace: ollama
spec:
  hosts:
    - ollama.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ollama-service
            port:
              number: 11434
